Add type doc page and update styles (#61)
- Clean up typography.md
- Heading font face is tisa serif
- Use TK font scale for <h*>
- Set font-size on <html> so REMs are consistent across browsers
- Set <p> to $font-up-1
- Remove .article h* styles so headers are always rendered consistently
at the expense of some redundancy in spacer elements
- Update <Snippet> to be inline-able for cleaner doc pages

--- a/pattern-library/docs/src/components/Layout/styles.css
+++ b/pattern-library/docs/src/components/Layout/styles.css
@@ -5,17 +5,5 @@
 
 .article {
   composes: col from '@xo-union/bootstrap/grid';
+  composes: py-4 from '@xo-union/bootstrap/utilities';
 }
-
-/*
- * This feels a little hacky but is just to add some extra spacing in articles
- * */
-.article h1,
-.article h2,
-.article h3,
-.article h4,
-.article h5,
-.article h6 {
-  margin-top: 35px;
-}
-
