--- a/pattern-library/src/typography/modules/font-scales.scss
+++ b/pattern-library/src/typography/modules/font-scales.scss
@@ -17,3 +17,5 @@
 .font-down-4 { font-size: $font-down-4; }
 .font-down-5 { font-size: $font-down-5; }
 
+.lh-header { line-height: $headings-line-height; }
+
