--- a/pattern-library/src/_shared/_bootstrap-overrides.scss
+++ b/pattern-library/src/_shared/_bootstrap-overrides.scss
@@ -14,6 +14,7 @@ $font-family-serif: serif-family-name, Georgia, "Times New Roman", Times, serif;
 $font-family-base: $font-family-sans-serif;
 $font-size-base: 16px;
 
+$headings-font-family: $font-family-serif;
 $line-height-base: 1.55;
 $headings-line-height: 1.25;
 
