--- a/pattern-library/src/fields/css/styles/dropdown-item.scss
+++ b/pattern-library/src/fields/css/styles/dropdown-item.scss
@@ -1,4 +1,4 @@
-@value ( gray-55, gray-90, black ) from '@xo-union/colors';
+@value ( gray-4, background-gray-8, black ) from '@xo-union/colors';
 @value ( font-up-1 ) from '@xo-union/typography/sizes';
 
 .dropdown-item {
@@ -6,7 +6,7 @@
   padding: 10px;
   cursor: pointer;
   position: relative;
-  color: gray-55;
+  color: gray-4;
 
   &:hover {
     color: black;
@@ -16,7 +16,7 @@
 .dropdown-item-is-selected {
   composes: dropdown-item;
 
-  background-color: gray-90;
+  background-color: background-gray-8;
   color: black;
 
   .dropdown-item-check {
