--- a/pattern-library/docs/src/components/SideNav/styles.css
+++ b/pattern-library/docs/src/components/SideNav/styles.css
@@ -1,7 +1,7 @@
-@value ( knot-blue-shade-50 ) from '@xo-union/colors';
+@value ( knot-blue-darker-50 ) from '@xo-union/colors';
 
 .active-nav-link {
   composes: nav-link from '@xo-union/bootstrap/nav';
   font-weight: bold;
-  color: knot-blue-shade-50;
+  color: knot-blue-darker-50;
 }
