--- a/pattern-library/src/fields/css/themes.scss
+++ b/pattern-library/src/fields/css/themes.scss
@@ -1,5 +1,5 @@
 @value ( gray-2 ) from '#/fields/css/shared/colors';
-@value ( gray-90, white, gray-95 ) from '@xo-union/colors';
+@value ( background-gray-9, background-gray-8, white ) from '@xo-union/colors';
 
 @mixin theme($base, $accent) {
   .field,
@@ -46,9 +46,9 @@
 }
 
 .gray-theme {
-  @include theme(gray-2, gray-90);
+  @include theme(gray-2, background-gray-8);
 }
 
 .white-theme {
-  @include theme(white, gray-95);
+  @include theme(white, background-gray-9);
 }
