--- a/pattern-library/src/colors/index.css
+++ b/pattern-library/src/colors/index.css
@@ -30,10 +30,10 @@
 @value knot-blue: #72caf2;
 @value knot-blue-darker-10: #69b8dc;
 @value knot-blue-darker-20: #61a7c7;
-@value knot-blue-darker-30: #5896b1;
+@value knot-blue-darker-30: #3ea9da;
 @value knot-blue-darker-40: #50859d;
 @value knot-blue-darker-50: #487488;
-@value knot-blue-darker-60: #406373;
+@value knot-blue-darker-60: #1388bb;
 
 /***********
  * Coral *
