--- a/pattern-library/src/fields/css/themes.scss
+++ b/pattern-library/src/fields/css/themes.scss
@@ -1,5 +1,4 @@
-@value ( gray-2 ) from '#/fields/css/shared/colors';
-@value ( background-gray-9, background-gray-8, white ) from '@xo-union/colors';
+@value ( gray-10, background-gray-9, background-gray-8, white ) from '@xo-union/colors';
 
 @mixin theme($base, $accent) {
   .field,
@@ -10,6 +9,10 @@
   .textarea-label
   {
     background-color: $base;
+
+    &:disabled {
+      background-color: gray-10;
+    }
   }
 
   .dropdown-item-is-selected {
@@ -46,7 +49,7 @@
 }
 
 .gray-theme {
-  @include theme(gray-2, background-gray-8);
+  @include theme(background-gray-9, background-gray-8);
 }
 
 .white-theme {
