--- a/pattern-library/src/colors/index.css
+++ b/pattern-library/src/colors/index.css
@@ -268,6 +268,7 @@
 @value coral-lighter-8-saturated: #e72914;
 @value red: #c00404;
 @value red-lighter-90: #f8e6e6;
+@value red-lighter-80: #f2cccc;
 @value green: #1ca420;
 @value green-lighter-90: #e8f6e9;
 @value green-lighter-80: #d1ecd2;
