--- a/pattern-library/src/fields/css/styles/dropdown-field.scss
+++ b/pattern-library/src/fields/css/styles/dropdown-field.scss
@@ -32,8 +32,8 @@
   position: absolute;
   right: 0;
   top: 0;
-  margin-top: 15px;
-  margin-right: spacer-x;
+  margin-top: 1rem;
+  margin-right: 1rem;
 }
 
 .dropdown-list {
