--- a/pattern-library/src/fields/css/styles/textarea.scss
+++ b/pattern-library/src/fields/css/styles/textarea.scss
@@ -1,4 +1,4 @@
-@value ( black, gray-4 ) from '@xo-union/colors';
+@value ( black, gray-6 ) from '@xo-union/colors';
 @value ( spacer-x ) from '#/fields/css/shared/spacing';
 @value ( font-up-1 ) from '@xo-union/typography/sizes';
 
@@ -10,10 +10,16 @@
   color: black;
   resize: none;
 
-  &::-moz-placeholder,
-  &::-ms-input-placeholder,
+  &::placeholder {
+    color: gray-6;
+    font-size: font-up-1;
+  }
+  &::-ms-input-placeholder {
+    color: gray-6;
+    font-size: font-up-1;
+  }
   &::-webkit-input-placeholder {
-    color: gray-4;
+    color: gray-6;
     font-size: font-up-1;
   }
 }
@@ -35,4 +41,5 @@
 
   margin-left: 10px;
   margin-top: 10px;
+  color: black;
 }
