--- a/pattern-library/docs/src/components/HeaderNav/SubNav/styles.css
+++ b/pattern-library/docs/src/components/HeaderNav/SubNav/styles.css
@@ -3,13 +3,11 @@
 }
 
 .sub-nav {
+  composes: nav from '../Nav/styles.css';
+
   z-index: 1;
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
-}
-
-.sub-nav:hover {
-  display: block !important;
 }
