--- a/pattern-library/docs/src/components/HeaderNav/ids.css
+++ b/pattern-library/docs/src/components/HeaderNav/ids.css
@@ -2,6 +2,4 @@
 #primary-nav,
 #primary-nav-pattern-library,
 #secondary-nav-content-pattern,
-#secondary-nav-core-components {
-
-}
+#secondary-nav-core-components { }
