--- a/pattern-library/docs/src/components/HeaderNav/SubNav/styles.css
+++ b/pattern-library/docs/src/components/HeaderNav/SubNav/styles.css
@@ -4,6 +4,7 @@
 
 .sub-nav {
   composes: nav from '../Nav/styles.css';
+  composes: sub-menu from '../Menu/styles.css';
 
   z-index: 1;
   position: absolute;
