--- a/pattern-library/docs/src/components/HeaderNav/Nav/styles.css
+++ b/pattern-library/docs/src/components/HeaderNav/Nav/styles.css
@@ -5,3 +5,7 @@
   border-bottom: nav-border;
   background-color: white;
 }
+
+.groups-container {
+  composes: d-flex justify-content-between from '@xo-union/bootstrap/utilities';
+}
