--- a/pattern-library/src/_shared/_bootstrap-overrides.scss
+++ b/pattern-library/src/_shared/_bootstrap-overrides.scss
@@ -29,7 +29,7 @@ $grid-breakpoints: (
   md: 824px,
   lg: 1004px,
   xl: 1320px
-) !default;
+);
 @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
 @include _assert-starts-at-zero($grid-breakpoints);
 
@@ -39,5 +39,5 @@ $container-max-widths: (
   md: 800px,
   lg: 980px,
   xl: 1296px
-) !default;
+);
 @include _assert-ascending($container-max-widths, "$container-max-widths");
