--- a/pattern-library/src/typography/modules/font-weights.scss
+++ b/pattern-library/src/typography/modules/font-weights.scss
@@ -19,3 +19,8 @@
   font-family: $font-family-sans-serif;
   font-weight: 400;
 }
+
+.sans-serif-med {
+  font-family: $font-family-sans-serif;
+  font-weight: 500;
+}
