--- a/pattern-library/src/icons/icons.css
+++ b/pattern-library/src/icons/icons.css
@@ -6,7 +6,7 @@
 }
 
 .icon {
-  // Better Font Rendering ===========
+  /* Better Font Rendering =========== */
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 
