--- a/pattern-library/src/header-nav/css/index.css
+++ b/pattern-library/src/header-nav/css/index.css
@@ -1,19 +1,9 @@
 @value (
   safe-gray-5,
   knot-blue,
-  white,
   background-gray-8,
   knot-blue-lighter-70
 ) from '@xo-union/colors';
-
-/* colors */
-.white-bg {
-  background-color: white;
-}
-
-.knot-blue-fg {
-  color: knot-blue;
-}
 
 /* Borders */
 @value menu-border: 1px solid background-gray-8;
@@ -101,8 +91,8 @@
 /* Menu */
 .menu-pointer {
   composes: align-self-center from '@xo-union/bootstrap/utilities';
+  composes: knot-blue-fg from '@xo-union/colors/css';
   composes: toggled;
-  composes: knot-blue-fg;
 
   font-size: 1rem;
   line-height: 0;
@@ -115,10 +105,10 @@
 .menu {
   composes: nav from '@xo-union/bootstrap/nav';
   composes: flex-column from '@xo-union/bootstrap/utilities';
+  composes: white-bg from '@xo-union/colors/css';
   composes: light-shadow;
   composes: toggled;
   composes: dropdown;
-  composes: white-bg;
 
   border-bottom: menu-border;
   border-left: menu-border;
