Implement localstorage caching of icons

--- a/pattern-library/docs/src/components/HeaderNav/PrimaryNav/logo.css
+++ b/pattern-library/docs/src/components/HeaderNav/PrimaryNav/logo.css
@@ -5,7 +5,7 @@
 }
 
 .icon {
-  composes: icon-general-tk-logo from '@xo-union/icons';
+  composes: icon-general-tk-logo from '@xo-union/icons/legacy';
   color: knot-blue;
   font-size: 35px;
 }
