--- a/pattern-library/src/fields/css/styles/dropdown-item.scss
+++ b/pattern-library/src/fields/css/styles/dropdown-item.scss
@@ -25,7 +25,7 @@
 }
 
 .dropdown-item-check {
-  composes: icon-general-checkmark-selected-state from '@xo-union/icons';
+  composes: icon-general-checkmark-selected-state from '@xo-union/icons/legacy';
 
   display: none;
   position: absolute;
